--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "@baller/i-ds",
-  "version": "1.0.1",
-  "private": false, 
+  "version": "1.0.2",
+  "private": false,
   "type": "module",
   "files": [
-    "dist"
+    "dist",
+    "src/components/index.d.ts"
   ],
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
       "require": "./dist/index.cjs"
     },
@@ -21,7 +24,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@heroicons/vue": "^2.1.1",
     "vue": "^3.3.11"
   },
   "devDependencies": {
