--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@baller/i-ds",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "i-ds",
   "private": false,
   "type": "module",
@@ -8,14 +8,11 @@
     "dist",
     "src"
   ],
-  "main": "./dist/index.umd.js",
-  "module": "./dist/index.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.esm.js",
   "types": "./dist/index.d.ts",
   "exports": {
-    ".": {
-      "import": "./dist/index.esm.js",
-      "require": "./dist/index.js"
-    },
+    ".": "./dist/index.esm.js",
     "./style.css": "./dist/style.css"
   },
   "keywords": [
