--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
   "name": "@baller/i-ds",
-  "version": "1.0.7",
+  "version": "1.0.9",
   "description": "i-ds",
   "private": false,
   "type": "module",
   "files": [
-    "dist",
-    "src"
+    "dist"
   ],
-  "main": "./dist/index.js",
-  "module": "./dist/index.esm.js",
-  "types": "./dist/index.d.ts",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "umd": "dist/index.umd.js",
   "exports": {
-    ".": "./dist/index.esm.js",
+    ".": {
+      "types": "./dist/index.d.ts",
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.js"
+    },
     "./style.css": "./dist/style.css"
   },
   "keywords": [
@@ -29,11 +33,17 @@
     "vue": "^3.0.0"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.7",
     "@types/node": "^20.10.7",
     "@vitejs/plugin-vue": "^4.5.2",
     "sass": "^1.69.7",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vue-tsc": "^1.8.25"
+  },
+  "dependencies": {
+    "@heroicons/vue": "^2.1.1",
+    "@vue-hero-icons/outline": "^1.7.2",
+    "vite-plugin-dts": "^3.7.1"
   }
 }
