--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/node": "^20.10.7",
     "@vitejs/plugin-vue": "^4.5.2",
     "sass": "^1.69.7",
+    "style-dictionary": "^3.9.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vue-tsc": "^1.8.25"
