--- a/package.json
+++ b/package.json
@@ -26,16 +26,34 @@
   ],
   "scripts": {
     "dev": "vite",
+    "preview": "vite preview",
+    "prepare": "husky install",
+    "format": "prettier . --write",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "lint": "eslint . --fix --max-warnings=0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+      "*.ts": [
+        "eslint 'src/**' --fix",
+        "npm run test:staged"
+      ]
   },
   "peerDependencies": {
     "vue": "^3.0.0"
   },
+  "eslintConfig": "./.eslintrc.json",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.7",
     "@types/node": "^20.10.7",
     "@vitejs/plugin-vue": "^4.5.2",
+    "eslint": "^8.56.0",
+    "eslint-plugin-vue": "^9.20.1",
+    "husky": "^8.0.3",
     "sass": "^1.69.7",
     "style-dictionary": "^3.9.2",
     "typescript": "^5.2.2",
