--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,11 +2,14 @@
   "extends": [
     "plugin:vue/base",
     "plugin:vue/essential",
-    "plugin:vue/vue3-recommended"
+    "plugin:vue/vue3-recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/eslint-recommended"
   ],
   "ignorePatterns": [
     "dist/**",
-    "script/**",
+    "scripts/**",
+    "vite.config.ts",
     "node_modules/**"
   ]
 }
