--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
     }
   },
   "lint-staged": {
-      "*.ts": [
-        "eslint 'src/**' --fix",
-        "npm run test:staged"
-      ]
+    "*.ts": [
+      "eslint 'src/**' --fix",
+      "npm run test:staged"
+    ]
   },
   "peerDependencies": {
     "vue": "^3.0.0"
@@ -50,6 +50,7 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.7",
     "@types/node": "^20.10.7",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@vitejs/plugin-vue": "^4.5.2",
     "eslint": "^8.56.0",
     "eslint-plugin-vue": "^9.20.1",
